# tao

./: .gitignore  .rustfmt.toml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTING_CN.md  Cargo.toml  H264_DIRECTION_A_COMPLETE.md  H264_IMPROVEMENT_PLAN.md  LESSONS_LEARNED.md  LESSONS_LEARNED_CN.md  LICENSE-MIT  MPEG4_TEST_EXECUTION_SUMMARY.md  README.md  README_CN.md  clean_aac_logs.py  test_psnr.py
.agent/rules/: code_organization.md  code_quality.md  comments.md  (+12 more)
.claude/: settings.local.json
.codegraph/: config.json
.github/: copilot-instructions.md
benches/: codec_bench.rs
bins/tao-cli/: Cargo.toml
bins/tao-cli/src/: filter.rs  logging.rs  main.rs  processor.rs  transcode.rs
bins/tao-play/: Cargo.toml  EGUI_MIGRATION.md
bins/tao-play/src/: audio.rs  clock.rs  gui.rs  logging.rs  main.rs  player.rs  video.rs
bins/tao-probe/: COMPAT_CHECKLIST.md  COMPAT_REPORT.md  Cargo.toml  README_COMPAT.md
bins/tao-probe/scripts/: check_scope.sh  compat_matrix.sh
bins/tao-probe/src/: app.rs  lib.rs  main.rs
bins/tao-probe/src/cli/: ffprobe_7_1_3_options.rs  mod.rs  parser.rs
bins/tao-probe/src/compat/: mod.rs  unimplemented.rs
bins/tao-probe/src/core/: command_plan.rs  mod.rs
bins/tao-probe/src/model/: mod.rs
bins/tao-probe/src/writer/: compact.rs  csv.rs  default.rs  flat.rs  ini.rs  json.rs  mod.rs  xml.rs
bins/tao-probe/tests/: compat_command_matrix.txt  compat_command_matrix_full.txt  ffprobe_compat_pipeline.rs
crates/tao-codec/: Cargo.toml
crates/tao-codec/src/: codec_id.rs  codec_parameters.rs  decoder.rs  encoder.rs  frame.rs  lib.rs  packet.rs  registry.rs
crates/tao-codec/src/decoders/: aac.rs  flac.rs  mod.rs  mp3.rs  mpeg4.rs  pcm.rs  rawvideo.rs  theora.rs  vorbis.rs
crates/tao-codec/src/decoders/aac/: huffman.rs  imdct.rs  mod.rs  spectral.rs  tables.rs  tests.rs
crates/tao-codec/src/decoders/h264/: cabac.rs  cabac_init_ext.rs  cabac_init_pb.rs  cavlc.rs  cavlc_mb.rs  common.rs  config.rs  deblock.rs  intra.rs  macroblock_inter.rs  macroblock_inter_cache.rs  macroblock_inter_mv.rs  macroblock_inter_weight.rs  macroblock_intra.rs  macroblock_state.rs  mod.rs  output.rs  parameter_sets.rs  residual.rs  sei.rs  slice_decode.rs  slice_parse.rs  syntax.rs  tests.rs
crates/tao-codec/src/decoders/h264/tests/: decode.rs  decode_b.rs  helpers.rs  mod.rs  output.rs  parameter_sets.rs  prediction.rs  reference.rs  sei.rs  slice_header.rs
crates/tao-codec/src/decoders/h265/: mod.rs
crates/tao-codec/src/decoders/mp3/: alias.rs  bit_reservoir.rs  bitreader.rs  data.rs  debug.rs  debug_tables.rs  header.rs  huffman.rs  huffman_explicit_tables.rs  imdct.rs  mod.rs  reorder.rs  requantize.rs  side_info.rs  stereo.rs  synthesis.rs  tables.rs
crates/tao-codec/src/decoders/mpeg4/: bframe.rs  bitreader.rs  block.rs  debug_color16.rs  dequant.rs  frame_decode.rs  gmc.rs  header.rs  idct.rs  mod.rs  motion.rs  packet_io.rs  partitioned.rs  short_header.rs  tables.rs  tests.rs  types.rs  vlc.rs
crates/tao-codec/src/decoders/vorbis/: bitreader.rs  codebook.rs  floor.rs  headers.rs  imdct.rs  mod.rs  residue.rs  setup.rs  synthesis.rs
crates/tao-codec/src/encoders/: aac.rs  flac.rs  mod.rs  pcm.rs  rawvideo.rs
crates/tao-codec/src/parsers/: mod.rs
crates/tao-codec/src/parsers/h264/: mod.rs  nal.rs  sps.rs
crates/tao-codec/src/parsers/h265/: mod.rs  nal.rs  sps.rs
crates/tao-codec/src/parsers/mpeg4/: mod.rs
crates/tao-ffi/: Cargo.toml  cbindgen.toml
crates/tao-ffi/examples/: decode_audio.c
crates/tao-ffi/src/: lib.rs
crates/tao-format/: Cargo.toml
crates/tao-format/src/: demuxer.rs  format_id.rs  io.rs  lib.rs  muxer.rs  probe.rs  registry.rs  stream.rs
crates/tao-format/src/demuxers/: aac.rs  aiff.rs  avi.rs  cue.rs  flac.rs  flv.rs  h264es.rs  m4v.rs  mod.rs  mp3.rs  mpegts.rs  ogg.rs  wav.rs
crates/tao-format/src/demuxers/mkv/: ebml.rs  mod.rs
crates/tao-format/src/demuxers/mp4/: boxes.rs  mod.rs  sample_table.rs
crates/tao-format/src/muxers/: aac.rs  aiff.rs  avi.rs  flac.rs  flv.rs  mkv.rs  mod.rs  mp3.rs  mp4.rs  mpegts.rs  ogg.rs  wav.rs
data/: README.md  SAMPLES.md  SAMPLE_URLS.md  download_samples.ps1
docs/: api_docs.md  api_docs_cn.md  quick_start.md  quick_start_cn.md
examples/: .gitkeep  SAMPLES.md
plans/: .gitkeep  H264_IMPROVEMENT_PLAN.md  MPEG4_PSNR_ANALYSIS_AND_IMPROVEMENTS.md  MPEG4_PSNR_VERIFICATION_REPORT.md  MPEG4_Part2_Decoder_Test_Execution_Report.md  MPEG4_Part2_Decoder_Test_Plan.md  PLAYBACK_VERIFICATION_GUIDE.md  PSNR_VERIFICATION_COMPLETION_SUMMARY.md  PSNR_VERIFICATION_WORKFLOW.md  VERIFICATION_FRAMEWORK_COMPLETION_SUMMARY.md  h264_baseline_report_20260225.md  h264_c1_diagnostics_phase2.md  h264_deblock_residual_bug_analysis.md  h264_precision_improvement_v2.md  immediate_fixes_action_plan.md  mp3_decoder.md  mp3_decoder_replace_symphonia.md  mpeg4_part2_decoder_perfection.md  summary_and_recommendations.md  tao-codec_flac_decoder_dev.md  tao-codec_mp3_batch_compare_plan.md  tao-codec_mp3_precision_plan.md  tao-codec_mp3_samples_report.md  tao-codec_mp3_samples_urls.txt  tao-codec_mp3样本批量对比计划.md  tao-codec_mp3精度提升计划.md  tao-codec_vorbis_decoder_dev.md  tao-codec_vorbis_precision_plan.md  tao-codec_vorbis解码器开发.md  tao_probe_ffprobe_compatibility_100.md  xvid_vs_tao_mpeg4_comparison.md
samples/: .gitkeep  ADVANCED_FEATURES_SEARCH.md  SAMPLES.md  SAMPLE_URLS.md
scripts/: debug_color16.py  debug_test1.py  run_mp3_samples_compare.py  trace_ffmpeg.py  verify_mpeg4_psnr.py
src/: lib.rs
tests/: aac_pipeline.rs  cue_playback_test.rs  debug_color16.rs  ffmpeg_compare.rs  flac_aiff_pipeline.rs  flac_encode_pipeline.rs  h264_decode_pipeline.rs  h264_functional_pipeline.rs  h264_parser_pipeline.rs  logging_system.rs  mkv_demux_pipeline.rs  mkv_mux_pipeline.rs  mp3_module_compare.rs  mp3_native_vs_symphonia.rs  mp3_pcm_dump.rs  mp4_demux_pipeline.rs  mp4_mux_pipeline.rs  mpeg4_advanced_features.rs  mpeg4_cbpy_diagnosis.rs  mpeg4_ffmpeg_baseline.rs  mpeg4_part2_pipeline.rs  mpegts_demux_pipeline.rs  run_decoder.rs  transcode_pipeline.rs  vorbis_module_compare.rs  vorbis_pipeline.rs  wav_pipeline.rs
(+150 files in other folders)
