[workspace]
members = [
    "crates/tao-core",
    "crates/tao-codec",
    "crates/tao-format",
    "crates/tao-filter",
    "crates/tao-scale",
    "crates/tao-resample",
    "crates/tao-ffi",
    "bins/tao-cli",
    "bins/tao-probe",
    "bins/tao-play",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/user/tao"
rust-version = "1.85"

[workspace.dependencies]
# 内部 crate 依赖
tao-core = { path = "crates/tao-core" }
tao-codec = { path = "crates/tao-codec" }
tao-format = { path = "crates/tao-format" }
tao-filter = { path = "crates/tao-filter" }
tao-scale = { path = "crates/tao-scale" }
tao-resample = { path = "crates/tao-resample" }
tao-ffi = { path = "crates/tao-ffi" }

# 错误处理
thiserror = "2"

# 日志
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"

# 错误处理
anyhow = "1"

# 时间处理
chrono = "0.4"

# 压缩
flate2 = "1"

# 异步运行时
tokio = { version = "1", features = ["rt-multi-thread", "time", "macros"] }

# 命令行参数
clap = { version = "4", features = ["derive"] }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 位操作
bitflags = "2"

# 字节处理
bytes = "1"
byteorder = "1"

# 并行处理
rayon = "1"

# 基准测试
criterion = { version = "0.5", features = ["html_reports"] }

# HTTP 客户端
ureq = "3"

# 临时目录
tempfile = "3"

# MP3 解码
puremp3 = "0.1"

# Vorbis 解码
lewton = "0.10"

[package]
name = "tao"
description = "纯 Rust 实现的多媒体处理框架, 对标 FFmpeg"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "tao"
path = "src/lib.rs"

[dependencies]
tao-core.workspace = true
tao-codec.workspace = true
tao-format.workspace = true
tao-filter.workspace = true
tao-scale.workspace = true
tao-resample.workspace = true

# 日志相关
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
anyhow.workspace = true
chrono.workspace = true
flate2.workspace = true
tokio.workspace = true
serde.workspace = true

[dev-dependencies]
bytes.workspace = true
criterion.workspace = true
tempfile.workspace = true
tao-format = { workspace = true, features = ["http"] }

[features]
default = []
http = ["tao-format/http"]

[[bench]]
name = "codec_bench"
harness = false

# dev 模式对核心 crate 启用完全优化, 避免播放器帧率过低
[profile.dev.package.tao-codec]
opt-level = 3
[profile.dev.package.tao-play]
opt-level = 3
[profile.dev.package.tao-resample]
opt-level = 3
