[package]
name = "tao-play"
description = "Tao 多媒体播放器, 对标 ffplay"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "tao-play"
path = "src/main.rs"

[dependencies]
tao-core.workspace = true
tao-codec.workspace = true
tao-format.workspace = true
tao-scale.workspace = true
tao-resample.workspace = true
clap.workspace = true
log.workspace = true
env_logger.workspace = true
cpal = "0.15"
minifb = "0.28"
