[package]
name = "tao-play"
description = "Tao 多媒体播放器, 对标 ffplay"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "tao-play"
path = "src/main.rs"

[dependencies]
tao-core.workspace = true
tao-codec.workspace = true
tao-format = { workspace = true, features = ["http"] }
tao-scale.workspace = true
tao-resample.workspace = true
clap.workspace = true
log.workspace = true
env_logger.workspace = true
sdl2 = { version = "0.38", features = ["bundled"] }
