[package]
name = "tao-format"
description = "Tao 多媒体框架容器格式库"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = ["http"]
http = ["dep:ureq"]

[dependencies]
tao-core.workspace = true
tao-codec.workspace = true
thiserror.workspace = true
log.workspace = true
bytes.workspace = true
byteorder.workspace = true
ureq = { workspace = true, optional = true }
